--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -324,6 +324,11 @@ section{overflow:hidden}
 .modal .modal-content.location .from-position input{border:2px #898989 solid;border-right:none;height:20px;padding:10px 0px;width:80%}
 .modal .modal-content.location .from-position button{width:20%;height:44px;margin:0px;background-color:#f80b43;color:#fff;margin-left:-10px;border:2px #898989 solid;border-left:none;}
 
+.search-quick.active{display:block}
+.search-quick{position: absolute;background-color: rgba(17, 37, 48, 0.85);padding: 10px;width: 570px;display:none}
+.search-quick ul li{padding: 10px 30px;float:left;min-width:100px;}
+.search-quick ul li a{color:#fff}
+
 @media screen and (max-width:1400px) {
 	.wrapper {width:100%}
 }
