--- a/public/templates/partials/cart-right.html
+++ b/public/templates/partials/cart-right.html
@@ -43,3 +43,36 @@
 		<div>Tổng tiền: {{ctrl.totalAmount | currency: "": 0}}</div>
 	</div>
 </div>
+<!-- Popup thông báo -->
+<div id="confirm-delete" class="modal fade" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content" style="margin-top:180px;">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Thông báo</h4>
+            </div>
+            <div class="contmid">Quý khách có chắc chắn xóa sản phẩm này không?</div>
+
+            <div class="modal-footer">
+                <button type="button" class="btleft bt" data-dismiss="modal">Huỷ</button>
+                <button type="button" class="btright bt" ng-click="ctrl.submitRemove()">Đồng ý</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="popupAlert" class="modal fade" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content" style="margin-top:180px;">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Thông báo</h4>
+            </div>
+            <div class="contmid" style="text-align: center">
+                {{ctrl.popMessage}}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btcenter bt" data-dismiss="modal">Đóng</button>
+            </div>
+        </div>
+    </div>
+</div>
