--- a/public/templates/login/register.html
+++ b/public/templates/login/register.html
@@ -1,33 +1,152 @@
+<body ng-app="myApp">
 <div class="wrap-register">
-	<div class="text-center">
-		<img src="/assets/images/logo.png" />
-	</div>
-	<div class="wrapper">
-		<div class="register">
-			<p class="">TẠO TÀI KHOẢN MỚI</p>
-			<form class="from-register">
-				<label>E-mail</label>
-				<input type="text" />
-				<label>Mật khẩu</label>
-				<input type="password" />
-				<label>Nhập lại mật khẩu</label>
-				<input type="password" />
-				<label>Mã bảo vệ</label>
-				<input type="text" class="capchar"/> <img src=""/>
-				<div class="clearfix"></div>
-				<input type="checkbox" class="checkbox"/> <span>Tôi đồng ý với các điều khoản và quy định của VnShop</span>
-				<div class="clearfix"></div>
-				<button>ĐĂNG KÝ</button>
-			</form>
-		</div>
-	</div>
+    <div class="text-center" >
+        <a href="scripts:;" ng-click="ctrl.openHome()">
+            <img src="/assets/images/logo.png"/>
+        </a>
+    </div>
+    <div class="wrapper">
+        <div class="register">
+            <p class="">TẠO TÀI KHOẢN MỚI</p>
+            <form class="from-register" name="myForm">
+                <input type="hidden" ng-model="ctrl.user.id"/>
+
+                <div class="row">
+                    <div class="form-group col-md-12">
+                        <label class="col-md-2 control-lable" for="email">E-mail</label>
+                        <div class="col-md-7">
+                            <input type="email" ng-model="ctrl.email" id="email" placeholder="Vui lòng nhập Email" required
+                                   ng-minlength="3" style="padding-left: 5px"/>
+                            <div class="has-error" ng-show="myForm.$dirty">
+                                <span ng-show="myForm.email.$error.required">This is a required field</span>
+                                <span ng-show="myForm.email.$error.minlength">Minimum length required is 3</span>
+                                <span ng-show="myForm.email.$invalid">This field is invalid </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-md-12">
+                        <label class="col-md-2 control-lable" for="password">Mật khẩu</label>
+                        <div class="col-md-7">
+                            <input type="password" ng-model="ctrl.password" id="password" placeholder="Vui lòng nhập mật khẩu. (ít nhất 8 ký tự)"
+                                   required ng-minlength="5" style="padding-left: 5px"/>
+                            <div class="has-error" ng-show="myForm.$dirty">
+                                <span ng-show="myForm.password.$error.required">This is a required field</span>
+                                <span ng-show="myForm.password.$error.minlength">Minimum length required is 8</span>
+                                <span ng-show="myForm.password.$invalid">This field is invalid </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-md-12">
+                        <label class="col-md-2 control-lable" for="passwordConfirm">Nhập lại mật khẩu</label>
+                        <div class="col-md-7">
+                            <input type="password" ng-model="ctrl.passConfirm" id="passwordConfirm"
+                                   placeholder="Vui lòng nhập lại mật khẩu" required ng-minlength="5" style="padding-left: 5px"/>
+                            <div class="has-error" ng-show="myForm.$dirty">
+                                <span ng-show="myForm.passConfirm.$error.required">This is a required field</span>
+                                <span ng-show="myForm.passConfirm.$error.minlength">Minimum length required is 8</span>
+                                <span ng-show="myForm.passConfirm.$invalid">This field is invalid </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <label id="passwrong" style="color: red;">Mật khẩu không chính xác</label>
+
+                <div class="clearfix"></div>
+
+                <label class="myCheckbox" style="margin-bottom: 30px">
+                    <input ng-model="ctrl.checkbox" type="checkbox" style="display: none" name="test" id="checkbox"/>
+                    <span></span>
+                    <label for="test" id="dongy">Tôi đồng ý với các điều khoản và quy định của VnShop</label>
+                </label>
+                <label id="checkboxwrong" style="color: red;">Bạn chưa đồng ý với các điều khoản và quy định của VnShop </label>
+
+                <div class="clearfix"></div>
+                <input id="register" ng-click="ctrl.addAccount()" type="submit" ng-disabled="myForm.$invalid" class="btn btn-primary btn-sm btn-submit" value="ĐĂNG KÝ">
+                <!--<input type="submit"  value="ĐĂNG KÝ" ng-disabled="myForm.$invalid">-->
+
+                <div id="example1"></div>
+                <p style="color:red;">{{ captcha_status }}</p>
+
+            </form>
+
+
+            <style>
+                .wrap-register .register input[type=submit]{
+                    text-align: center; height: 40px; cursor: pointer; background: #337ab7; color: #FFF
+                }
+                .wrap-register .register input[type=submit][disabled=disabled]
+                 {
+                background: darkgray;
+                }
+                .myCheckbox{
+                    position: relative;
+                }
+                #dongy{
+                    position: absolute;
+                    top: 0;
+                    left: 30px;
+                }
+                .myCheckbox input {
+                position: relative;
+                    z-index: -9999;
+                }
+
+                .myCheckbox span {
+                    width: 20px;
+                    height: 20px;
+                    display: block;
+                    background: url("/assets/images/blue.png");
+                }
+
+                .myCheckbox input:checked + span {
+                    background: url("/assets/images/blue.png") -39px 0 no-repeat;
+                }
+
+
+            </style>
+        </div>
+    </div>
 </div>
+
 <script>
-	$(document).ready(function(){
-		$('.wrap-register input').iCheck({
-			checkboxClass: 'icheckbox_square',
-			radioClass: 'iradio_square',
-			increaseArea: '20%'
-		});
-	});
+    $(document).ready(function () {
+//        $('.wrap-register input').iCheck({
+//            checkboxClass: 'icheckbox_square',
+//            radioClass: 'iradio_square',
+//            increaseArea: '20%'
+//        });
+    });
+
+    $(document).ready(function () {
+        $("#passwrong").hide();
+        $("#checkboxwrong").hide();
+
+        $("#register").click(function () {
+            if ($("#password").val() != $("#passwordConfirm").val()) {
+                $("#passwrong").show();
+            } else {
+                $("#passwrong").hide();
+            }
+
+
+            if(document.getElementById("checkbox").checked == false){
+                $("#checkboxwrong").show();
+            }else{
+                $("#checkboxwrong").hide();
+            }
+
+        });
+    });
+
+
 </script>
+
+
+</body>
