--- a/public/templates/home/index.html
+++ b/public/templates/home/index.html
@@ -8,10 +8,10 @@
                         <a id="navToggle" class="animated-arrow slideLeft"><span></span></a>
                     </div>
                     <nav class="wsmenu slideLeft" id="nav">
-                        <ul id="menu" class="menu-primary" ng-repeat="category in ctrl.categories">
-                            <li data-id="1">
+                        <ul id="menu" class="menu-primary">
+                            <li ng-repeat="category in ctrl.categories" data-id="{{ category.id }}" ng-mouseover="showDeail(category.product_home, category.id)">
                                 <a href="javascript:;" ng-click="ctrl.openCategory(category.id)">
-                                    <img src="{{ category.icon }}"/>
+                                    <img ng-src="{{ category.icon_web }}"/>
                                     {{ category.name }}
                                 </a>
                             </li>
@@ -20,11 +20,8 @@
                 </div>
             </div>
             <div class="left w55" id="menu-detail">
-                <div class="hide" id="menu-detail-1">
-                    <a href="#"><img src="/assets/upload/adt.jpg"/></a>
-                </div>
-                <div class="" id="menu-detail-2">
-                    <a href="#"><img src="/assets/upload/adt1.jpg"/></a>
+                <div ng-repeat="category in ctrl.categories track by $index" ng-if="$index==0" ng-init="ctrl.productHome = category.product_home; ctrl.catId = category.id">
+                    <a href="javascript:;" ng-click="ctrl.openCategory(ctrl.catId)"><img src="{{ctrl.productHome}}"/></a>
                 </div>
             </div>
             <div class="left w24" ng-repeat="banner in ctrl.homeData"
@@ -47,8 +44,8 @@
                 <div class="cat">
                     <div href="javascript:;" class="red">
                         <div class="title-cat left">
-                            <img src="{{product.icon}}"/>
-                            <span ng-click="ctrl.openCategory(product.category_id)">{{product.category}}</span>
+                            <img src="{{product.icon_web}}"/>
+                            <a href="javascript:;"><span ng-click="ctrl.openCategory(product.category_id)">{{product.category}}</span></a>
                         </div>
                         <div class="arrow left"></div>
                     </div>
@@ -67,7 +64,7 @@
                         </div>
                         <div class="position">{{detail['location']}}</div>
                         <div class="title"><a href="{{detail['link']}}">{{detail['title']}}</a></div>
-                        <div class="price">Giá chỉ từ: <span>{{detail['price']}} VND</span></div>
+                        <div class="price">Giá chỉ từ: <span>{{detail['price'] | number }} VND</span></div>
                     </div>
                 </div>
 
@@ -81,7 +78,7 @@
                             </div>
                             <div class="position">{{detail['location']}}</div>
                             <div class="title"><a href="{{detail['link']}}">{{detail['title']}}</a></div>
-                            <div class="price">Giá chỉ từ: <span>{{detail['price']}} VND</span></div>
+                            <div class="price">Giá chỉ từ: <span>{{detail['price'] | number }} VND</span></div>
                         </div>
                     </div>
                 </div>
@@ -93,7 +90,7 @@
                                 <div class="left w50">
                                     <div class="title"><a href="{{detail['link']}}">{{detail['title']}}</a></div>
                                     <div class="pl5">{{detail['location']}}</div>
-                                    <div class="price">Giá chỉ từ:<br/> <span>{{detail['price']}} VND</span></div>
+                                    <div class="price">Giá chỉ từ:<br/> <span>{{detail['price'] | number }} VND</span></div>
                                 </div>
                                 <div class="left w50" >
                                     <div class="img">
@@ -118,7 +115,7 @@
                             <div class="cat">
                                 <div class="blue">
                                     <div class="title-cat left">
-                                        <img src="{{product.icon}}"/>
+                                        <img src="{{product.icon_web}}"/>
                                         <span ng-click="ctrl.openCategory(product.category_id)">{{product.category}}</span>
                                     </div>
                                     <div class="arrow left"></div>
@@ -131,7 +128,7 @@
                             </div>
                             <div class="position">{{detail['location']}}</div>
                             <div class="title"><a href="{{detail['link']}}">{{detail['title']}}</a></div>
-                            <div class="price">Giá chỉ từ: <span>{{detail['price']}} VND</span></div>
+                            <div class="price">Giá chỉ từ: <span>{{detail['price'] | number }} VND</span></div>
                         </div>
                     </div>
                     <div class="product-right" ng-repeat="detail in product.details" ng-if="detail['sort_weigh'] == 2 ">
@@ -144,7 +141,7 @@
                                 </div>
                                 <div class="position">{{detail['location']}}</div>
                                 <div class="title"><a href="{{detail['link']}}">{{detail['title']}}</a></div>
-                                <div class="price">Giá chỉ từ: <span>{{detail['price']}} VND</span></div>
+                                <div class="price">Giá chỉ từ: <span>{{detail['price'] | number }} VND</span></div>
                             </div>
                         </div>
                     </div>
@@ -156,7 +153,7 @@
                             <div class="product-content">
                                 <div class="title"><a href="{{detail['link']}}">{{detail['title']}}</a></div>
                                 <div class="position">{{detail['location']}}</div>
-                                <div class="price">Giá chỉ từ: <span>{{detail['price']}} VND</span></div>
+                                <div class="price">Giá chỉ từ: <span>{{detail['price'] | number }} VND</span></div>
                             </div>
                         </div>
                         <div class="product bgfbf9f9" ng-repeat="detail in product.details"
@@ -178,7 +175,7 @@
                                         </a>
                                     </div>
                                     <div class="title"><a href="{{detail['link']}}">{{detail['title']}}</a></div>
-                                    <div class="price">Giá chỉ từ: <span>{{detail['price']}} VND</span></div>
+                                    <div class="price">Giá chỉ từ: <span>{{detail['price'] | number }} VND</span></div>
                                 </div>
                             </div>
                         </div>
@@ -194,7 +191,7 @@
                                         </a>
                                     </div>
                                     <div class="title"><a href="{{detail['link']}}">{{detail['title']}}</a></div>
-                                    <div class="price">Giá chỉ từ: <span>{{detail['price']}} VND</span></div>
+                                    <div class="price">Giá chỉ từ: <span>{{detail['price'] | number }} VND</span></div>
                                 </div>
                             </div>
                         </div>
