--- a/public/templates/products/detail.html
+++ b/public/templates/products/detail.html
@@ -3,7 +3,7 @@
 		<div class="container cat">
 			<div class="block_menu bgebebeb mb10 pl5 clearfix">
 				<a ng-click="ctrl.openHome()"><img src="/assets/images/icon_home.png"/> VNSHOP</a>>
-				<a ng-repeat="parent in ctrl.parents track by $index" ng-click="ctrl.openCategory(parent.id)">{{parent.name}}</a>
+				<a ng-repeat="parent in ctrl.parents track by $index" ng-click="ctrl.openCategory(parent.id)">{{parent.name}} ></a>
 				<a ng-click="ctrl.openCategory(ctrl.category.id)" class="fw">{{ctrl.category.name}}</a>
 			</div>
 			<div class="product-detail pb10 clearfix">
