--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -121,7 +121,8 @@ section{overflow:hidden}
 
 .product-cat .cat{margin-bottom: -50px;position: absolute;}
 .cat .title-cat{line-height:50px;color:#fff;padding:0px 20px;text-transform:uppercase;}
-.cat .title-cat span{padding-left:10px;}
+.cat .title-cat a{color:#fff;padding-left:10px;}
+.cat .title-cat a:hover{color:#fff;}
 .cat .arrow{width: 0px;height: 0px;border-bottom: 25px solid transparent;border-top: 25px solid transparent;}
 
 .cat .yellow .title-cat{background-color:#f8ca3e;}
