--- a/public/templates/products/food.html
+++ b/public/templates/products/food.html
@@ -2,53 +2,38 @@
 	<div class="wrapper">
 		<div class="container cat">
 			<div class="pb10 clearfix">
-				<img src="/assets/upload/p-cat-food.jpg" />
+				<img src="{{ctrl.category.product_image}}" />
 			</div>
 			<div class="block_menu bgebebeb mb10 pl5 clearfix">
-				<a href=""><img src="/assets/images/icon_home.png"/></a>
-				<a href="">VNSHOP</a>>
-				<a href="">Thời trang nữ</a>>
-				<a href="" class="fw">Váy nữ</a>
+				<a ng-click="ctrl.openHome()"><img src="/assets/images/icon_home.png"/> VNSHOP</a>>
+				<a ng-repeat="parent in ctrl.parents track by $index" ng-click="ctrl.openCategory(parent.id)">{{parent.name}} ></a>
+				<a class="fw">{{ctrl.category.name}}</a>
 			</div>
 			<div class="product pb10 clearfix">
 				<div class="left w20">
 					<div class="order-product bgffffff"> 
-						<select>
-							<option>-- Sắp xếp theo --</option>
-							<option>Cani</option>
-							<option>Schoies</option>
-							<option>Colloyes</option>
-							<option>Cani</option>
-							<option>Schoies</option>
-							<option>Colloyes</option>
-							<option>Cani</option>
-							<option>Schoies</option>
-							<option>Colloyes</option>
+						<select ng-model="ctrl.sort" ng-change="sort()">>
+							<option value="" ng-selected="selected">-- Sắp xếp theo --</option>
+							<option value="1">Giá tăng dần</option>
+							<option value="2">Giá giảm dần</option>
+							<option value="3">Sản phẩm mới</option>
 						</select>
 					</div>
 					
 					<div class="display-product bgffffff"> 
-						<select>
-							<option>Hiển thị 10 sản phẩm</option>
-							<option>Hiển thị 20 sản phẩm</option>
-							<option>Hiển thị 50 sản phẩm</option>
-							<option>Hiển thị 100 sản phẩm</option>
+						<select ng-model="ctrl.limit" ng-change="limit()">>
+							<option value="12" ng-selected="selected">Hiển thị 12 sản phẩm</option>
+							<option value="24">Hiển thị 24 sản phẩm</option>
+							<option value="60">Hiển thị 60 sản phẩm</option>
+							<option value="90">Hiển thị 90 sản phẩm</option>
 						</select>
 					</div>
 					
-					<div class="cat-child bgffffff"> 
+					<div ng-if="ctrl.subMenu.children.length > 0" class="cat-child bgffffff"> 
 						<div class="pb10 pt10 fw">LỌC THEO NGÀNH HÀNG</div>
 						<div class="child pl10">
 							<div class="pl10 pb10">
-								<div><a href="">Cani</a></div>
-								<div><a href="">Schoies</a></div>
-								<div><a href="">Colloyes</a></div>
-								<div><a href="">Cani</a></div>
-								<div><a href="">Schoies</a></div>
-								<div><a href="">Colloyes</a></div>
-								<div><a href="">Cani</a></div>
-								<div><a href="">Schoies</a></div>
-								<div><a href="">Colloyes</a></div>
+								<div ng-repeat="menu in ctrl.subMenu.children track by $index"><a ng-click="ctrl.openCategory(menu.id)">{{menu.name}}</a></div>
 							</div>
 						</div>
 					</div>
@@ -57,210 +42,90 @@
 						<div class="brand">
 							<div class="pb10 fw">THƯƠNG HIỆU</div>
 							<div class="pb10">
-								<div><input type="checkbox" checked /><a>Cani</a></div>
-								<div><input type="checkbox" /><a>Schoies</a></div>
-								<div><input type="checkbox" /><a>Colloyes</a></div>
-								<div><input type="checkbox" /><a>Cani</a></div>
-								<div><input type="checkbox" /><a>Schoies</a></div>
-								<div><input type="checkbox" /><a>Colloyes</a></div>
-								<div><input type="checkbox" /><a>Cani</a></div>
-								<div><input type="checkbox" /><a>Schoies</a></div>
-								<div><input type="checkbox" /><a>Colloyes</a></div>
+								<div ng-repeat="brand in ctrl.brands track by $index" ng-click="ctrl.openBrand(brand.id)">
+									<div ng-if="brand.id == ctrl.brandId">
+										<input type="checkbox" checked value="{{brand.id}}" /><span>{{ brand.name | limitTo: 20 }}{{brand.name.length > 20 ? '...' : ''}}</span>
+									</div>
+									<div ng-if="brand.id != ctrl.brandId">
+										<input type="checkbox" value="{{brand.id}}" /><span>{{ brand.name | limitTo: 20 }}{{brand.name.length > 20 ? '...' : ''}}</span>
+									</div>
+								</div>
 							</div>
 						</div>
 						<div class="price">
 							<div class="pb10 fw">KHOẢNG GIÁ</div>
 							<div class="pb10">
-								<div><input type="checkbox" checked /><a>0 - 500.000</a></div>
-								<div><input type="checkbox" /><a>500.000 - 1.500.000</a></div>
-								<div><input type="checkbox" /><a>1.500.000 - 2.500.000</a></div>
-								<div><input type="checkbox" /><a>2.500.000 - 10.000.000</a></div>
-								<div><input type="checkbox" /><a>Trên 10.000.000</a></div>
+								<div ng-if="'0,500000' == ctrl.ratePrice">
+									<div><input type="checkbox" checked /><span>Dưới 500.000</span></div>
+								</div>
+								<div ng-if="'0,500000' != ctrl.ratePrice">
+									<div ng-click="ctrl.openRatePrice('0,500000')"><input type="checkbox" /><span>Dưới 500.000</span></div>
+								</div>
+								<div ng-if="'500000,1500000' == ctrl.ratePrice">
+									<div><input type="checkbox" checked /><span>500.000 - 1.500.000</span></div>
+								</div>
+								<div ng-if="'500000,1500000' != ctrl.ratePrice">
+									<div ng-click="ctrl.openRatePrice('500000,1500000')"><input type="checkbox" /><span>500.000 - 1.500.000</span></div>
+								</div>
+								<div ng-if="'1500000,2500000' == ctrl.ratePrice">
+									<div><input type="checkbox" checked /><span>1.500.000 - 2.500.000</span></div>
+								</div>
+								<div ng-if="'1500000,2500000' != ctrl.ratePrice">
+									<div ng-click="ctrl.openRatePrice('1500000,2500000')"><input type="checkbox" /><span>1.500.000 - 2.500.000</span></div>
+								</div>
+								<div ng-if="2500000 == ctrl.ratePrice">
+									<div><input type="checkbox" checked /><span>Trên 2.500.000</span></div>
+								</div>
+								<div ng-if="2500000 != ctrl.ratePrice">
+									<div ng-click="ctrl.openRatePrice('2500000')"><input type="checkbox" /><span>Trên 2.500.000</span></div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="left w80">
 					<div class="category-food">
-						<div class="product">
-							<div class="product-content">
+						<div ng-if="!ctrl.hasData">Không tìm thấy sản phẩm</div>
+						<div class="product" ng-repeat="product in ctrl.products track by $index">
+							<div class="product-content">								
 								<div class="img">
-									<img src="/assets/upload/p-cat-food-1.jpg" />
+									<a ng-click="ctrl.openDetail(product.id)"><img src="{{ product.image }}" /></a>
 								</div>
-								<div class="sale-off">
-									50% <div class="fw100">&nbsp OFF</div>
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
+								<div class="title"><a ng-click="ctrl.openDetail(product.id)">{{ product.name | limitTo: 60 }}{{product.name.length > 60 ? '...' : ''}}</a></div>
 								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
+									<p class="discount"><br ng-if="cart.compare_at_price >= cart.price" />{{ product.compare_at_price | number }} VND</p>
+									<span ng-if="product.compare_at_price < product.price">{{ product.price | number }} VND</span>
 								</div>
-								<div class="buy"><div>Mua ngay</div></div>
-							</div>
-						</div>
-						<div class="product">
-							<div class="product-content">
-								<div class="img">
-									<img src="/assets/upload/p-cat-food-2.jpg" />
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
-								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
-								</div>
-								<div class="buy"><div>Mua ngay</div></div>
-							</div>
-						</div>
-						<div class="product">
-							<div class="product-content">
-								<div class="img">
-									<img src="/assets/upload/p-cat-food-3.jpg" />
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
-								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
-								</div>
-								<div class="buy"><div>Mua ngay</div></div>
-							</div>
-						</div>
-						<div class="product">
-							<div class="product-content">
-								<div class="img">
-									<img src="/assets/upload/p-cat-food-4.jpg" />
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
-								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
-								</div>
-								<div class="buy"><div>Mua ngay</div></div>
-							</div>
-						</div>
-						<div class="product">
-							<div class="product-content">
-								<div class="img">
-									<img src="/assets/upload/p-cat-food-1.jpg" />
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
-								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
-								</div>
-								<div class="buy"><div>Mua ngay</div></div>
-							</div>
-						</div>
-						<div class="product">
-							<div class="product-content">
-								<div class="img">
-									<img src="/assets/upload/p-cat-food-2.jpg" />
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
-								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
-								</div>
-								<div class="buy"><div>Mua ngay</div></div>
-							</div>
-						</div>
-						<div class="product">
-							<div class="product-content">
-								<div class="img">
-									<img src="/assets/upload/p-cat-food-3.jpg" />
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
-								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
-								</div>
-								<div class="buy"><div>Mua ngay</div></div>
-							</div>
-						</div>
-						<div class="product">
-							<div class="product-content">
-								<div class="img">
-									<img src="/assets/upload/p-cat-food-4.jpg" />
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
-								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
-								</div>
-								<div class="buy"><div>Mua ngay</div></div>
-							</div>
-						</div>
-						<div class="product">
-							<div class="product-content">
-								<div class="img">
-									<img src="/assets/upload/p-cat-food-1.jpg" />
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
-								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
-								</div>
-								<div class="buy"><div>Mua ngay</div></div>
-							</div>
-						</div>
-						<div class="product">
-							<div class="product-content">
-								<div class="img">
-									<img src="/assets/upload/p-cat-food-2.jpg" />
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
-								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
-								</div>
-								<div class="buy"><div>Mua ngay</div></div>
-							</div>
-						</div>
-						<div class="product">
-							<div class="product-content">
-								<div class="img">
-									<img src="/assets/upload/p-cat-food-3.jpg" />
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
-								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
-								</div>
-								<div class="buy"><div>Mua ngay</div></div>
-							</div>
-						</div>
-						<div class="product">
-							<div class="product-content">
-								<div class="img">
-									<img src="/assets/upload/p-cat-food-4.jpg" />
-								</div>
-								<div class="title"><a href="">BST hot summer 2017</a></div>
-								<div class="price">
-									<p class="discount">7.000.000 VND</p>
-									<span>8.000.000 VND</span>
-								</div>
-								<div class="buy"><div>Mua ngay</div></div>
+								<div class="buy"><div ng-click="ctrl.addProductToCart(product.id)">Mua ngay</div></div>
 							</div>
 						</div>
 					</div>
 					<div class="clearfix"></div>
-					<div class="paging">
+					<div class="paging" ng-if="ctrl.paging.length && ctrl.hasData">
 						<ul>
-							<li class="active"><a>&lsaquo;</a></li>
-							<li><a>1</a></li>
-							<li><a>2</a></li>
-							<li><a>3</a></li>
-							<li><a>4</a></li>
-							<li><a>5</a></li>
-							<li><a>&rsaquo;</a></li>
+							<li ng-if="ctrl.pageCurrent > 5" ng-click="ctrl.openPage(1)" ><a>&lsaquo;</a></li>
+							<li ng-repeat="(key, value) in ctrl.paging" ng-click="ctrl.openPage(value)" ng-class="{true: 'active', false: ''}[ctrl.pageCurrent == value]"><a>{{value}}</a></li>
+							<li ng-if="ctrl.pageCurrent < +ctrl.totalPage - 4" ng-click="ctrl.openPage(ctrl.totalPage)" ><a>&rsaquo;</a></li>
 						</ul>
-						<div class="right">TỪ 1 ĐẾN 12 CỦA 65 SẢN PHẨM | </div>
+						<div class="right">TỪ {{+ctrl.offset + 1}} ĐẾN {{+ctrl.offset + +ctrl.limit}} CỦA {{+ctrl.totalPage * +ctrl.limit}} SẢN PHẨM <span ng-if="ctrl.hasData">|<span> </div>
 					</div>
+					&nbsp
 					<div class="clearfix"></div>
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
+<!-- The Modal -->
+<div id="popupInfo" class="modal">
+	<!-- Modal content -->
+	<div class="modal-content">
+		<a class="close" rel="modal:close"></a>
+		<div class="clearfix"></div>
+		<div class="title">Thông báo</div>
+		<div class="text-center content">{{ctrl.msgPopup}}</div>
+	</div>
+</div>
 <script>
 	$(document).ready(function(){
 		$('.product input').iCheck({
