--- a/public/templates/products/index.html
+++ b/public/templates/products/index.html
@@ -7,7 +7,7 @@
 			<div class="block_menu bgebebeb mb10 pl5 clearfix">
 				<a ng-click="ctrl.openHome()"><img src="/assets/images/icon_home.png"/> VNSHOP</a>>
 				<a ng-repeat="parent in ctrl.parents track by $index" ng-click="ctrl.openCategory(parent.id)">{{parent.name}} ></a>
-				<a href="javascript:;" class="fw">{{ctrl.category.name}}</a>
+				<a class="fw">{{ctrl.category.name}}</a>
 			</div>
 			<div class="product pb10 clearfix">
 				<div class="left w20">
@@ -42,14 +42,11 @@
 						<div class="brand">
 							<div class="pb10 fw">THƯƠNG HIỆU</div>
 							<div class="pb10">
-								<div ng-if="ctrl.brandId !== ''" ng-click="ctrl.openBrand()">
-									<input type="checkbox" /><span>Tất cả</span>
-								</div>
-								<div ng-repeat="brand in ctrl.brands track by $index" ng-click="ctrl.openBrand(brand.id)">
-									<div ng-if="brand.id == ctrl.brandId">
+								<div ng-repeat="brand in ctrl.brands track by $index">
+									<div ng-if="brand.id == ctrl.brandId" ng-click="ctrl.openBrand(brand.id)">
 										<input type="checkbox" checked value="{{brand.id}}" /><span>{{ brand.name | limitTo: 20 }}{{brand.name.length > 20 ? '...' : ''}}</span>
 									</div>
-									<div ng-if="brand.id != ctrl.brandId">
+									<div ng-if="brand.id != ctrl.brandId" ng-click="ctrl.openBrand(brand.id)">
 										<input type="checkbox" value="{{brand.id}}" /><span>{{ brand.name | limitTo: 20 }}{{brand.name.length > 20 ? '...' : ''}}</span>
 									</div>
 								</div>
@@ -111,9 +108,9 @@
 						<ul>
 							<li ng-if="ctrl.pageCurrent > 5" ng-click="ctrl.openPage(1)" ><a>&lsaquo;</a></li>
 							<li ng-repeat="(key, value) in ctrl.paging" ng-click="ctrl.openPage(value)" ng-class="{true: 'active', false: ''}[ctrl.pageCurrent == value]"><a>{{value}}</a></li>
-							<li ng-if="ctrl.pageCurrent < +ctrl.total - 4" ng-click="ctrl.openPage(ctrl.total)" ><a>&rsaquo;</a></li>
+							<li ng-if="ctrl.pageCurrent < +ctrl.totalPage - 4" ng-click="ctrl.openPage(ctrl.totalPage)" ><a>&rsaquo;</a></li>
 						</ul>
-						<div class="right">TỪ {{+ctrl.offset + 1}} ĐẾN {{+ctrl.offset + +ctrl.limit}} CỦA {{+ctrl.total * +ctrl.limit}} SẢN PHẨM <span ng-if="ctrl.hasData">|<span> </div>
+						<div class="right">TỪ {{+ctrl.offset + 1}} ĐẾN {{+ctrl.offset + +ctrl.limit}} CỦA {{+ctrl.totalPage * +ctrl.limit}} SẢN PHẨM <span ng-if="ctrl.hasData">|<span> </div>
 					</div>
 					&nbsp
 					<div class="clearfix"></div>
