update link tra cuu thong tin

--- a/public/templates/partials/header.html
+++ b/public/templates/partials/header.html
@@ -1,7 +1,7 @@
 <div class="header clearfix">
     <div class="wrapper">
-        <a href="#">Tra cứ thông tin</a>
-        <a href="#">Chăm sóc khách hàng</a>
+        <a href="javascript:;">Tra cứ thông tin</a>
+        <a href="javascript:;">Chăm sóc khách hàng</a>
     </div>
 </div>
 <section class="wrapper">
