--- a/public/templates/login/login.html
+++ b/public/templates/login/login.html
@@ -1,6 +1,8 @@
 <div class="login">
 	<div class="text-center">
-		<img src="/assets/images/logo.png" />
+		<a href="scripts:;" ng-click="ctrl.openHome()">
+			<img src="/assets/images/logo.png"/>
+		</a>
 	</div>
 	<div class="wrapper">
 		<div class="wrap-login">
