--- a/public/templates/home/index.html
+++ b/public/templates/home/index.html
@@ -175,6 +175,7 @@
                                         </a>
                                     </div>
                                     <div class="title"><a href="{{detail['link']}}">{{detail['title']}}</a></div>
+                                    <div class="pl5">{{detail['location']}}</div>
                                     <div class="price">Giá chỉ từ: <span>{{detail['price'] | number }} VND</span></div>
                                 </div>
                             </div>
@@ -191,7 +192,9 @@
                                         </a>
                                     </div>
                                     <div class="title"><a href="{{detail['link']}}">{{detail['title']}}</a></div>
+                                    <div class="pl5">{{detail['location']}}</div>
                                     <div class="price">Giá chỉ từ: <span>{{detail['price'] | number }} VND</span></div>
+
                                 </div>
                             </div>
                         </div>
